[package]
name = "ndisc-tree"
version = "0.2.12"
description = "FLAC library quality scanner — spectral high-frequency analysis to flag lossy-source files"
authors = ["xjmzx"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ndisc_tree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
walkdir = "2"
regex = "1"
# OS trash (XDG/freedesktop on Linux) — mirror-folder deletion goes to trash so
# it stays recoverable, the safe analog of an undo rather than a hard rm.
trash = "5"
# Wall-clock timeout on Child processes — defence against ffmpeg/ffprobe
# hanging on a single pathological file (corrupt FLAC, NFS stall, etc).
wait-timeout = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Nostr identity: keypair generation, bech32 nsec/npub encoding. Matches ndisc.
nostr = "0.43"
# Nostr relay client for publishing kind:7 reactions + kind:5 deletions.
nostr-sdk = "0.43"
# OS keychain (libsecret on Linux via secret-service). Matches ndisc.
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
